--- a/src/app/run/list/list.component.html
+++ b/src/app/run/list/list.component.html
@@ -20,6 +20,7 @@
         @if (dataset?.x?.canAdd && preCheck({}, dataset?.x?.addPre, false)) {
           @if (!(form?.data?.prev && !prevId)) {
 
+            <!-- FormID:{{form['data']?.id}}, prev:{{form.data.prev?'prev':'add'}}, prevId:{{prevId}}, form.data.prev:{{form.data.prev}} -->
             <button type="button" class="btn btn-primary bg-gradient flex-grow-1 flex-sm-grow-0" ngbTooltip="New Entry"
               (click)="runAction('/form/'+form['data']?.id+'/'+(form.data.prev?'prev':'add'),dataset?.x?.inpopAdd, inPopTpl,prevId,form?.data?.id,'form',form.data.prev?'prev':'add', $param$())">
               <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
