--- a/src/app/run/list/list.component.html
+++ b/src/app/run/list/list.component.html
@@ -303,7 +303,7 @@
                               {{listKv?.key}}
                             }
                           </div>
-                          <div class="bg-secondary px-1 text-white ms-2" style="font-size: 11px; border-radius:3px; line-height:13px">{{listKv?.value?.length}}</div>
+                          <div class="bg-secondary px-1 text-white ms-2 mb-auto" style="font-size: 11px; border-radius:3px; line-height:13px">{{listKv?.value?.length}}</div>
                         </button>
 
                       </td>
