--- a/src/app/run/_component/ng-leaflet/ng-leaflet.component.html
+++ b/src/app/run/_component/ng-leaflet/ng-leaflet.component.html
@@ -1,4 +1,4 @@
-<div id="map-{{randId}}" class="map-target-div" style="height:380px; min-width:180px;" [style]="screen()?.data?.mapStyle"></div>
+<div id="map-{{randId}}" class="map-target-div" style="height:380px; min-width:180px;border-radius: var(--bs-border-radius)" [style]="screen()?.data?.mapStyle"></div>
 <!-- @if (multiple()){
     @for(v of value(); track $index){
         <button (click)="removeMarker($index)">{{v.lat}},{{v.lng}}</button>
