--- a/src/app/_shared/modal/edit-form/edit-form.component.html
+++ b/src/app/_shared/modal/edit-form/edit-form.component.html
@@ -30,6 +30,16 @@
               </div>
               <div class="col-md-6"> -->
                 <div class="form-group mb-3">
+                  <label class="form-label">Extend from</label>
+                  <select class="form-select" name="extended" [compareWith]="compareByIdFn" [(ngModel)]="editFormData().x.extended">
+                    <option [ngValue]="null"> * No Form </option>
+                    @for (form of formListRoot(); track form.id) {
+                    <option [ngValue]="form.id">{{form.title}}
+                    </option>
+                    }
+                  </select>
+                </div>
+                <div class="form-group mb-3">
                   <label class="form-label">Admin</label>
                   <select class="form-select" name="admin" [compareWith]="compareByIdFn" [(ngModel)]="editFormData().admin">
                     <option [ngValue]="null"> * No Admin </option>
