--- a/src/app/_shared/modal/edit-lookup/edit-lookup.component.html
+++ b/src/app/_shared/modal/edit-lookup/edit-lookup.component.html
@@ -313,14 +313,14 @@
               <div class="form-group mb-3">
                 <label class="form-label">Client Secret *</label>
                 <input type="text" class="form-control"
-                  [(ngModel)]="lookup().clientSecret"
+                  [(ngModel)]="lookup().clientSecret" name="clientSecret"
                   placeholder="ie: 87897jhjd-9182731yye" required>
               </div>
             </div>
           </div>
           <div class="form-group mb-3">
             <label class="form-label">Token Endpoint *</label>
-            <input type="text" class="form-control"
+            <input type="text" class="form-control" name="tokenEndpoint"
               [(ngModel)]="lookup().tokenEndpoint"
               placeholder="ie: https://identity.unimas.my/oauth/token" required>
           </div>
