--- a/src/app/run/_component/field-edit-a/field-edit-a.component.html
+++ b/src/app/run/_component/field-edit-a/field-edit-a.component.html
@@ -752,7 +752,7 @@
           </div>
         }
         @if (!value) {
-          <div style="background: #aaa;height:250px;max-width:100%"
+          <div style="background: #aaa;height:250px;max-width:100%;border-radius:var(--bs-border-radius)"
             class="d-flex align-items-center text-center">
             <div style="flex: 1;color: white; font-size: 0.8em">
               Click to upload image
@@ -764,7 +764,7 @@
           </div>
         }@else{
           @if (field().subType=='image') {
-            <div style="max-width:100%" class="align-items-center text-center d-relative">
+            <div style="max-width:100%;border-radius:var(--bs-border-radius);overflow:hidden" class="align-items-center text-center d-relative">
               <img loading="lazy" [src]="baseApi + '/entry/file/inline/'+value | secure | async" style="max-width: 100%;"
                 alt="Image preview...">
               <div style="bottom:30px;left:20px; position: absolute;padding:3px; font-size: 0.8em;">
