--- a/src/app/run/view/view.component.css
+++ b/src/app/run/view/view.component.css
@@ -55,3 +55,9 @@
     ::ng-deep .card-body{padding:.8em !important;}
     
   }
+
+  .label-span {
+    opacity: 0.7;
+    font-size: 0.95em;
+    margin-bottom: 0.3rem;
+  }
