--- a/src/styles.scss
+++ b/src/styles.scss
@@ -132,7 +132,7 @@ body {
 
 .disabled {
   pointer-events: none !important;
-  opacity: 0.5;
+  opacity: 0.65;
 }
 
 /*Override datepicker ugly btn border*/
@@ -161,33 +161,7 @@ body {
   box-shadow: none;
 }
 
-/* .modal-backdrop {
-     */
-/*background-color: #fff;
-    */
-/* 
-}
- */
-/* .form-control {
-     box-shadow: none;
-}
- .flash-message{
-     position: fixed;
-     bottom: 0px;
-     right: 0px;
-     padding: 0px 15px;
-     font-size:14px;
-     float: right;
-     z-index: 1051;
-     transition: all .5s ease;
-}
- .flash-message .alert{
-     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3) ;
-     border-radius: 0;
-     border:solid 1px;
-     transition: all .5s ease;
-}
- */
+
 .limit-width {
   max-width: 780px;
 }
@@ -260,28 +234,6 @@ body {
   border-radius: 0.2rem;
 }
 
-// .head {
-//   position: sticky;
-//   font-size: 18px;
-//   top: 0;
-//   background: #fff;
-//   border-bottom: #ccc;
-//   z-index: 11;
-//   box-shadow: 0px 4px 8px -3px rgba(17, 17, 17, 0.06);
-// }
-// .head .title {
-//   float: left;
-//   padding: 20px 15px;
-//   font-size: 18px;
-//   line-height: 20px;
-// }
-// .head a {
-//   margin: 12px;
-// }
-// .head a i {
-//   line-height: 20px;
-//   font-size: 20px;
-// }
 a {
   text-decoration: none;
 }
@@ -993,63 +945,6 @@ ngb-pagination ul.pagination{
   }
 }
 
-.has-float-label {
-  angular-editor .angular-editor {
-    min-height: 58px !important;
-    width: 100%;
-    border-radius: 0.375rem;
-    padding: 1.4rem 0.75rem 0.175rem !important;
-    margin-top: 0px !important;
-    border: 1px solid #ddd;
-    // overflow:hidden;
-  }
-
-  angular-editor .angular-editor-toolbar {
-    margin-top: 8px;
-    padding: 5px 0px 0px;
-    border-top: solid 1px #ddd !important;
-  }
-
-  angular-editor .angular-editor-textarea {
-    border:none !important;
-    outline: none !important;
-    padding:0 !important;
-    margin-top:2px; margin-bottom:5px;
-  }
-  // angular-editor .angular-editor-textarea:focus-visible {
-  //   outline:none !important;
-  // }
-
-  // angular-editor.hide-toolbar angular-editor-toolbar {
-  //   display: none !important;
-  // }
-
-  angular-editor .angular-editor-placeholder {
-    // padding: 1.4rem 0.75rem 0.175rem !important;
-    padding: 0 !important;
-  }
-
-  angular-editor .angular-editor:focus-within {
-    border-color: #007eff !important;
-    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.5);
-    outline: solid 1.5px white;
-  }  
-  
-  angular-editor angular-editor-toolbar {
-    display: none !important;
-  }  
-  angular-editor:focus-within angular-editor-toolbar {
-    display: block !important;
-  }
-
-  angular-editor.is-invalid .angular-editor:focus-within {
-    border-color: #dc3545 !important;
-    box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.5);
-    outline: solid 1.5px white;
-  }
-
-
-}
 
 .clean {
   .angular-editor-toolbar button {
@@ -1081,6 +976,12 @@ ngb-pagination ul.pagination{
 
 .rounded-3-5{
   border-radius: 0.7em;
+}
+
+.ng-select.ng-select-sm .ng-select-container {
+  min-height: 32px;
+  height: 32px;
+  font-size:0.875rem;
 }
 
 // .mermaid{
