resync with run

--- a/src/app/_shared/modal/edit-lookup-entry/edit-lookup-entry.component.html
+++ b/src/app/_shared/modal/edit-lookup-entry/edit-lookup-entry.component.html
@@ -45,6 +45,101 @@
           </div>
         }
         @if (lookup().dataEnabled) {
+          <div class="mb-3">
+            <div class="text-muted small fw-bold text-center add-data-split mx-n3">
+              <span class="bg-white" style="display: inline-block;z-index: 1;position: relative;padding: 5px;">
+                Data (additional attributes)</span>
+            </div>
+              @for (e of lookupEntryFields; track $index) {
+                <div class="form-group mb-3">
+                  <label class="form-label">{{e.key}}</label>
+                  <div class="input-group">
+                    @if (e.type=='text') {
+                      <input class="form-control form-control-sm" type="text"
+                        name="value_{{$index}}"
+                        [(ngModel)]="lookupEntry().data[e.key]">
+                    }
+                    @if (e.type=='longtext') {
+                      <textarea class="form-control form-control-sm"
+                        name="value_{{$index}}"
+                      [(ngModel)]="lookupEntry().data[e.key]"></textarea>
+                    }
+                    @if (e.type=='number') {
+                      <input class="form-control form-control-sm" type="number"
+                        name="value_{{$index}}"
+                        [(ngModel)]="lookupEntry().data[e.key]">
+                    }
+                    @if (e.type=='date') {
+                      <input class="form-control form-control-sm" type="text"
+                        name="value_{{$index}}"
+                        [(ngModel)]="lookupEntry().data[e.key]" (click)="d2.toggle()" ngbDatepicker
+                        #d2="ngbDatepicker">
+                    }
+                    @if (e.type=='options') {
+                      <select class="form-control form-control-sm" name="value_{{$index}}"
+                        [(ngModel)]="lookupEntry().data[e.key]">
+                        @for (a of e.opts; track $index) {
+                          <option [ngValue]="a">{{a}}</option>
+                        }
+                      </select>
+                    }
+                    @if (e.type=='lookup') {
+                      <ng-select style="width:100%" class="ng-select-sm" [items]="lookupListMap[e.opts]" 
+                        [virtualScroll]="true" 
+                        bindLabel="name" placeholder="No value" [(ngModel)]="lookupEntry().data[e.key]"
+                        name="value_{{$index}}">
+                      </ng-select>
+                    }
+                    @if (e.type=='file') {
+                      <label class="flex-grow-1">
+                        <input type="file" [hidden]="true" (change)="uploadFile($event, lookupEntry().data, e.key)"
+                          name="file" />
+                        <div class="form-control form-control-sm" style="background: white">
+                          <fa-icon [icon]="['fas','upload']"></fa-icon>
+                          {{lookupEntry().data[e.key]||'Browse'}}
+                        </div>
+                      </label>
+                    }
+
+                    @if (e.type!='lookup'){
+                      <button type="button" style="--bs-btn-border-color:#ddd" class="btn btn-sm btn-outline-secondary border-start-0"
+                        (click)="deleteDataRow(lookupEntry().data, e.key)">
+                        <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
+                      </button>
+                    }
+                   </div>
+                </div>
+              }
+              @for (e of lookupEntryFieldsOrphan|keyvalue; track $index) {
+                <div class="form-group mb-3">
+                  <label class="form-label">{{e.key}} (orphan)</label>
+
+                  <div class="input-group">
+                    @if (!isNumber(lookupEntry().data[e.key])) {
+                      <input class="form-control form-control-sm" style="width:100%" type="text"
+                        name="valueorph_{{$index}}"
+                        [(ngModel)]="lookupEntry().data[e.key]">
+                    }
+                    @if (isNumber(lookupEntry().data[e.key])) {
+                      <input class="form-control form-control-sm" style="width:100%" type="number"
+                        name="valueorph_{{$index}}"
+                        [(ngModel)]="lookupEntry().data[e.key]">
+                    }
+
+                    <button type="button" class="btn btn-sm btn-light"
+                      (click)="deleteDataRow(lookupEntry().data, e.key)">
+                      <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
+                    </button>
+                  </div>
+                </div>
+              }
+          </div>
+        }
+
+
+
+        <!-- OLDER ADDITIONAL DATA FIELDS -->
+        <!-- @if (lookup().dataEnabled) {
           <div class="form-group mb-3">
             <label class="form-label text-muted small fw-bold">Data (Additional attributes)</label>
             <table width="100%">
@@ -84,13 +179,6 @@
                       </select>
                     }
                     @if (e.type=='lookup') {
-                      <!-- <select class="form-control form-control-sm" style="width:100%" name="value_{{$index}}"
-                        [compareWith]="compareByCodeFn"
-                        [(ngModel)]="lookupEntry().data[e.key]">
-                        @for (a of lookupListMap[e.opts]; track $index) {
-                          <option [ngValue]="a">{{a.name}}</option>
-                        }
-                      </select> -->
                       <ng-select style="width:100%" class="ng-select-sm" [items]="lookupListMap[e.opts]" 
                         [virtualScroll]="true" 
                         bindLabel="name" placeholder="No value" [(ngModel)]="lookupEntry().data[e.key]"
@@ -143,7 +231,9 @@
               }
             </table>
           </div>
-        }
+        } -->
+
+
         <div class="form-group mb-3">
           <div class="form-check form-switch mt-1">
             <input type="checkbox" class="form-check-input"
