--- a/src/app/design/editor/lookup-editor/lookup-editor.component.html
+++ b/src/app/design/editor/lookup-editor/lookup-editor.component.html
@@ -459,7 +459,7 @@
             <label class="form-label">
               <input type="file" [hidden]="true" (change)="uploadExcel($event)" name="file" required
                 accept=".xlsx" />
-              @if (!importLoading) {
+              @if (importLoading) {
                 <div class="form-control" style="background: white">
                   Importing...
                 </div>
